--- a/mythtv/themes/MythCenter/htmls/progdetails_page2.html
+++ b/mythtv/themes/MythCenter/htmls/progdetails_page2.html
@@ -1,4 +1,6 @@
-<HTML>
+<?xml version="1.0" encoding="utf-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html>
 <head>
     <style type="text/css">
         h1 {font-size:15pt;font-style: normal;color:#33FF33}
