--- a/mythtv/themes/Terra/htmls/progdetails_page2.html
+++ b/mythtv/themes/Terra/htmls/progdetails_page2.html
@@ -1,9 +1,7 @@
+<?xml version="1.0" encoding="utf-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
-    <meta http-equiv="content-language" content="en-GB" />
-
     <style type="text/css">
         body {background-color:#484537;}
         h1 {font-family:Arial;font-size:24pt;font-style: normal;color:#ffffff}
