WebFrontend: A number of performance improvements for the index page, menu and overview.

--- a/mythtv/html/index.html
+++ b/mythtv/html/index.html
@@ -2,26 +2,24 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<!--<meta name="viewport"
+  content="width=device-width, initial-scale=1.0, user-scalable=no">--> <!-- Not ready to go live yet -->
 <title>
 MythTV WebFrontend
 </title>
 <link rel="stylesheet"    href="/css/site.css"         type="text/css">
-<link rel="stylesheet"    href="/3rdParty/jquery/jqueryUI/css/jquery-ui.css" type="text/css">
 <link rel="stylesheet"    href="/css/setup.css"        type="text/css">
+<link rel="stylesheet"    href="/3rdParty/jquery/jqueryUI/css/jquery-ui.css" type="text/css">
+<!-- These aren't needed on an intial load, they could be deferred? -->
 <link rel="stylesheet"    href="/3rdParty/jquery/jqueryFileTree/jqueryFileTree.css" type="text/css" media="screen">
 <link rel="stylesheet"    href="/3rdParty/jquery/jqueryMultiSelect/css/jquery.multiselect.css" type="text/css">
 <link rel="stylesheet"    href="/3rdParty/jquery/jqueryGrid/css/ui.jqgrid.css" type="text/css">
+<!-- End -->
 <link rel="icon"          href="/images/favicon.ico"   type="image/x-icon">
 <link rel="shortcut icon" href="/images/favicon.ico"   type="image/x-icon">
 <script type="text/javascript"  src="/js/util.qjs"></script>
-<script type="text/javascript"  src="/js/databaseutil.js"></script>
 <script type="text/javascript"  src="/3rdParty/jquery/jquery-2.0.3.js"></script>
 <script type="text/javascript"  src="/3rdParty/jquery/jqueryUI/js/jquery-ui-1.10.3.js"></script>
-<script type="text/javascript"  src="/3rdParty/jquery/jqueryContextMenu/js/jquery.contextmenu.js"></script>
-<script type="text/javascript"  src="/3rdParty/jquery/jqueryMultiSelect/js/jquery.multiselect.js"></script>
-<script type="text/javascript"  src="/3rdParty/jquery/jqueryGrid/js/grid.locale-en.js"></script>
-<script type="text/javascript"  src="/3rdParty/jquery/jqueryGrid/js/jquery.jqGrid.js"></script>
-<script type="text/javascript"  src="/3rdParty/jquery/jqueryJScroll/jquery.jscroll.js"/></script>
 <script type="text/javascript"  src="/js/menu.js"></script>
 
 <script type="text/javascript">
@@ -53,11 +51,8 @@ $(document).keyup(function(e) {
 <div>&#9660; <span>Menu</span> &#9660;</div>
 </div>
 
-<div id="menu-bg">
+<div id="menu-bg" class="menu-hidden" onMouseOut="hideMainMenu()">
 </div>
-
-<!--<div id="hostname">
-</div>-->
 
 <div id="content" onMouseOver="hideMainMenu()">
 </div>
@@ -97,6 +92,13 @@ $(document).keyup(function(e) {
 
 <div id='debug' title='Debugging Popup'> <!-- Don't remove, used for developer debugging -->
 </div>
+
+<!-- Should the 'post-load' javascript be bundled? -->
+<script type="text/javascript"  src="/3rdParty/jquery/jqueryContextMenu/js/jquery.contextmenu.js"></script>
+<script type="text/javascript"  src="/3rdParty/jquery/jqueryMultiSelect/js/jquery.multiselect.js"></script>
+<script type="text/javascript"  src="/3rdParty/jquery/jqueryGrid/js/grid.locale-en.js"></script>
+<script type="text/javascript"  src="/3rdParty/jquery/jqueryGrid/js/jquery.jqGrid.js"></script>
+<script type="text/javascript"  src="/3rdParty/jquery/jqueryJScroll/jquery.jscroll.js"/></script>
 
 </body>
 </html>
