WebFrontend: Don't use onMouseOut() for now, the behaviour is ... odd

--- a/mythtv/html/index.html
+++ b/mythtv/html/index.html
@@ -51,7 +51,7 @@ $(document).keyup(function(e) {
 <div>&#9660; <span>Menu</span> &#9660;</div>
 </div>
 
-<div id="menu-bg" class="menu-hidden" onMouseOut="hideMainMenu()">
+<div id="menu-bg" class="menu-hidden"> <!-- onMouseOut="hideMainMenu()"> -->
 </div>
 
 <div id="content" onMouseOver="hideMainMenu()">
