WebFrontend: Add a MythEvent handler using websockets. Only implementation so far is to toggle frontend status on the overview screen as they connect and disconnect.

--- a/mythtv/html/backend_index.html
+++ b/mythtv/html/backend_index.html
@@ -17,6 +17,7 @@ MythTV WebFrontend
 <!-- End -->
 <link rel="icon"          href="/images/favicon.ico"   type="image/x-icon">
 <link rel="shortcut icon" href="/images/favicon.ico"   type="image/x-icon">
+<script type="text/javascript"  src="/js/websocket_events.js"></script>
 <script type="text/javascript"  src="/js/util.qjs"></script>
 <script type="text/javascript"  src="/3rdParty/jquery/jquery-2.0.3.js"></script>
 <script type="text/javascript"  src="/3rdParty/jquery/jqueryUI/js/jquery-ui-1.10.3.js"></script>
